:hankey: Try and fix curator idea on mobile

--- a/src/components/schedule-section/index.module.styl
+++ b/src/components/schedule-section/index.module.styl
@@ -91,3 +91,8 @@
 
 .learnMore
   transform: translateY(pxToRem(-3))
+
+.curatorIdeaM
+  f()
+  font-size: pxToRem(12) !important
+  line-height: 1 !important
